# Seismic_BPMF

./: LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  pytest.ini  setup.py
BPMF/: GPU.cu  NLLoc_utils.py  __init__.py  catalog_utils.py  clib.py  common.py  config.py  data_backup.py  data_reader_examples.py  dataset.py  db_h5py.py  event_extraction.py  libc.c  libc.h  libcu.cu  moveouts.py  multiplet_search.py  plotting_utils.py  replace.sh  similarity_search.py  spectrum.py  template_search.py  utils.py
BPMF.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
automatic_detection/: Makefile  README.txt  __init__.py  clib.py  config.py  data.py  dataset.py  db_h5py.py  event_extraction.py  libcu.h  multiplet_search.py  plotting_utils.py  second_order_matched_filter.py  template_search.py  utils.py
docs/: genindex.html  index.html  introduction.html  objects.inv  py-modindex.html  search.html  searchindex.js  tutorial.html  updates.html  usage.html
docs/_modules/: index.html
docs/_sources/: index.rst.txt  introduction.rst.txt  tutorial.rst.txt  updates.rst.txt
docs/_static/: documentation_options.js
docs/tutorial/: general.html
docs/usage/: api.html
source/: conf.py  index.rst  introduction.rst  tutorial.rst  updates.rst  usage.rst
source/tutorial/: general.rst
source/usage/: api.rst
tests/: station.xml  stream.mseed  test_remove_response.py
tutorial/data/: velocity_model_Karabulut2011.csv
tutorial/notebooks/: 0_initialize_project.ipynb  10_magnitudes.ipynb  1_download_data.ipynb  2_preprocess_data.ipynb  3_network_file.ipynb  (+8 more)
(+75 files in other folders)
